# dosbox-x

./: .gitignore  .gitmodules  CLAUDE.md  Makefile.am  build-debug-sdl2  configure.ac  demo_input_recording.lua  dosbox-x.reference.conf
experiments/lua/: sol.hpp
include/: cpu.h  custom.h  debug.h  dosbox.h  lua_re_hooks.h  mem_capture.h  memory_domains.h  paging.h  pc98_cdl.h  savestate_manager.h
lua-scripts/: README.txt  debug_session.lua  debug_window.lua  force_gui_test.lua  segment_mapper.lua  symbol_examples.lua
lua-scripts/examples/: cheat-system.lua  speedrun-helper.lua
src/: Makefile.am  dosbox.cpp
src/cpu/: Makefile.am  core_dyn_x86.cpp  core_dynrec.cpp  core_full.cpp  core_normal.cpp  core_normal_286.cpp  core_normal_8086.cpp  core_prefetch.cpp  core_prefetch_286.cpp  core_prefetch_8086.cpp  core_simple.cpp  cpu.cpp
src/cpu/core_normal/: support.h
src/debug/: Makefile.am  debug.cpp  debug_gui.cpp  debug_inc.h  debug_tools_manager.cpp  debug_tools_manager.h  debug_win32.cpp
src/dos/: dos_files.cpp  dos_network2.h
src/gui/: Makefile.am  imgui_dx11_optimizations.cpp  imgui_performance_config.h  imgui_window.cpp  imgui_window.h  menu.cpp  menu_callback.cpp  render.cpp  sdl_gui.cpp  sdl_mapper.cpp  sdlmain.cpp
src/hardware/: Makefile.am  glide.cpp  ne2000.cpp  vga_draw.cpp
src/hardware/parport/: printer.cpp
src/hardware/serialport/: libserial.cpp
src/libs/decoders/: archive.h
src/libs/fluidsynth/: fluid_seq.c  fluid_synth.c
src/luaengine/: LuaEngine.cpp  Makefile.am  asio_gnu_source.h  autocomplete.cpp  autocomplete.h  cheat_engine.cpp  cheat_engine.h  cheat_window.cpp  cheat_window.h  core_debug_interface.cpp  core_debug_interface.h  debug_bridge.cpp  debug_bridge.h  debug_config.cpp  debug_config.h  debug_logger.cpp  debug_logger.h  debug_tools_manager.cpp  debug_tools_manager.h  debug_utils.h  debug_window_base.h  debugger_session.cpp  debugger_session.h  disassembly_window.cpp  disassembly_window.h  event_manager.cpp  event_manager.h  execution_toolbar.cpp  execution_toolbar.h  force_gnu_source.h  frame_control.cpp  frame_control.h  gui_windows.cpp  gui_windows.h  hex_editor.cpp  hex_editor.h  hex_editor_window.cpp  hex_editor_window.h  instrumentation_router.cpp  instrumentation_router.h  (+35 more)
src/memory/: Makefile.am  memory_domains.cpp
src/misc/: Makefile.am  mem_capture.cpp  pc98_cdl.cpp
src/output/: Makefile.am  output_opengl.cpp
tools/pc98rev/: README.md  brandish-nolua-svga.conf  brandish-nolua.conf  brandish.conf  check_db.py  list_game_reads.py  parse_khd.py  pc98rev.lua  pyproject.toml
tools/pc98rev/pc98rev/: __init__.py  __main__.py  cli.py  decompressor.py  ingest_cdl.py  khd_parser.py  memmap.py  model.py  verify.py  zstd_io.py
vs/: LuaEngine.cpp  config.h  debug_config.ini  dosbox-x.sln  dosbox-x.vcxproj  dosbox-x.vcxproj.filters  imgui.ini  luaengine.h
vs/freetype/builds/windows/vc2010/: freetype.vcxproj
vs/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h
vs/libpdcurses/: libpdcurses.vcxproj
vs/libpng/projects/vstudio/libpng/: libpng.vcxproj
vs/lua/: Makefile.am
vs/lua-scripts/: check_imgui_context.lua  check_overlay_keys.lua  check_render_conditions.lua  confirm_render_issue.lua  debug_main_render_loop.lua  debug_overlay_rendering.lua  debug_window_rendering.lua  demo.lua  direct_imgui_test.lua  discover_gui_api.lua  dosbox-x-lua-demo.lua  enable_overlay.lua  final_overlay_test.lua  fix_window_rendering.lua  force_overlay_render.lua  force_overlay_visible.lua  force_screen_activity.lua  multiviewport_demo.lua  simple_overlay_test.lua  simple_test.lua  test_features.lua  test_overlay.lua  test_render_integration.lua  trigger_overlay_render.lua  working_overlay_test.lua
vs/lua-scripts/examples/: simple-memory-monitor.lua
vs/lua/lua/: lua.vcxproj  lua.vcxproj.filters
vs/lua/sol/: config.hpp  sol.hpp
vs/sdl/VisualC/SDL/: SDL.vcxproj
vs/sdl/VisualC/SDLmain/: SDLmain.vcxproj
vs/sdl2/VisualC/SDL/: SDL.vcxproj  SDL.vcxproj.filters
vs/sdl2/VisualC/SDLmain/: SDLmain.vcxproj
vs/sdlnet/VisualC/: SDL_net_VS2008.vcxproj
vs/zlib/zlib/: zlib.vcxproj
vs2015/freetype/objs/: freetype.lib
