[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pc98rev"
version = "0.1.0"
description = "PC-98 reverse-engineering and lossless rebuild toolchain for DOSBox-X"
requires-python = ">=3.9"
dependencies = [
    "iced-x86>=1.21.0",
    "click>=8.0",
    "zstandard>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "mypy",
]

[project.scripts]
pc98rev = "pc98rev.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pc98rev*"]
